misc updates to internal api